Cities without a join

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 		<main>
 			<div id="controls">
 				<label for="country">Country:</label>
-				<input id="country" type="search" name="country" placeholder="Enter country name" />
+				<input id="country" type="search" name="country" placeholder="Enter country name or city" />
 				<button id="lookup">Lookup</button>
+				<button id="cityLookup">City Lookup</button>
 			</div>
 			
 			<div id="result">
